--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,10 @@
-FROM progrium/busybox
+FROM debian:sid
 MAINTAINER Jessica Frazelle <jess@docker.com>
+
+RUN apt-get update && apt-get install -y \
+	ca-certificates \
+	--no-install-recommends \
+	&& rm -rf /var/apt/lists/*
 
 ADD https://jesss.s3.amazonaws.com/binaries/weather-server /usr/local/bin/weather-server
 
