--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -19,9 +19,9 @@
 #  name = "github.com/x/y"
 #  version = "2.4.0"
 
-
 [prune]
   non-go = true
+  go-tests = true
   unused-packages = true
 
 [[override]]
