try another go get

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,5 +7,6 @@ steps:
   commands:
   - go get golang.org/x/lint/golint
   - go get honnef.co/go/tools/cmd/staticcheck
+  - go get github.com/vielmetti/weather
   - make all
   - make cover  
