--- a/.drone.yml
+++ b/.drone.yml
@@ -4,6 +4,7 @@ name: drone-weather
 steps:
 - name: make-cover
   image: golang:1.10
+  pull: true
   commands:
   - go get golang.org/x/lint/golint
   - go get honnef.co/go/tools/cmd/staticcheck
