--- a/.drone.yml
+++ b/.drone.yml
@@ -23,4 +23,4 @@ steps:
       - go get
       - go build -o weather
       - chmod +x weather
-      - ./weather
+      - ./weather -l "Ann Arbor, Michigan"
