add my test case

--- a/.drone.yml
+++ b/.drone.yml
@@ -23,4 +23,5 @@ steps:
       - go get
       - go build -o weather
       - chmod +x weather
+      - ./weather --latitude 42.27756 --longitude -83.74088
       - ./weather -l "Ann Arbor, Michigan"
