remove the dot, see if it checks more
see if the shellcheck is more thorough

--- a/.drone.yml
+++ b/.drone.yml
@@ -29,4 +29,4 @@ steps:
     commands:
       - go get honnef.co/go/tools/cmd/staticcheck
       - go get
-      - staticcheck .
+      - staticcheck
